[gd_scene load_steps=3 format=3 uid="uid://btf0iccai10qr"]

[ext_resource type="Script" path="res://addons/versatile-mobile-joystick/joytick.gd" id="1_ofv6b"]

[sub_resource type="CircleShape2D" id="CircleShape2D_46m5w"]
radius = 4.0

[node name="JoystickController" type="Node2D"]
script = ExtResource("1_ofv6b")

[node name="Joystick" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="Tip" type="Sprite2D" parent="Joystick"]
unique_name_in_owner = true

[node name="Base" type="Sprite2D" parent="Joystick"]
unique_name_in_owner = true

[node name="TouchDetectorIndicator" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2147483648
monitoring = false
monitorable = false

[node name="TouchDetector" type="CollisionShape2D" parent="TouchDetectorIndicator"]
unique_name_in_owner = true
debug_color = Color(0.137255, 0.647059, 0, 0.0509804)

[node name="DeadZoneIndicator" type="Area2D" parent="."]

[node name="DeadZone" type="CollisionShape2D" parent="DeadZoneIndicator"]
unique_name_in_owner = true
debug_color = Color(1, 0, 0.133333, 0.117647)

[node name="TipLimitIndicator" type="Area2D" parent="."]

[node name="TipLimit" type="CollisionShape2D" parent="TipLimitIndicator"]
unique_name_in_owner = true
debug_color = Color(0.666667, 0.509804, 0, 0.117647)

[node name="TouchIndicator" type="Area2D" parent="." groups=["TouchIndicator"]]
unique_name_in_owner = true
collision_layer = 2147483648
collision_mask = 0
monitoring = false

[node name="Touch" type="CollisionShape2D" parent="TouchIndicator"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_46m5w")
debug_color = Color(1, 0.6, 0.701961, 0)
